[package]
name = "derive-merge-struct"
version = "0.1.0"
edition = "2021"
authors = ["Reticence Ji"]
license = "MIT"
description = "A derive macro to partially update a named struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_merge = { path = "derive_merge" }
