[package]
name = "derive-merge-struct"
version = "0.2.0"
edition = "2021"
authors = ["Reticence Ji"]
license = "MIT"
description = "A derive macro to partially update a named struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_merge = { version = "0.2.0", path = "../derive_merge" }
